--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ body {
 	}
 		#tweet-controls {
 			text-align: right;
+			display:none;
 		}
 			#tweet-controls div {
 				display: inline-block;
@@ -136,6 +137,12 @@ body {
 			#char-count {
 				font-size: 14px;
 				color: #999;
+				text-shadow: 0 1px 1px rgba(255,255,255,.75);
+			}
+
+			#char-count.danger{
+				font-size: 20px;
+				color: #F99;
 				text-shadow: 0 1px 1px rgba(255,255,255,.75);
 			}
 
@@ -168,7 +175,20 @@ body {
 
 	.tweet-actions {
 		text-align: right;
+		max-height: 0px;
+		overflow: hidden;
+		transition-duration:1s;
+		transition-property:all;
 	}
+	.tweet:hover .tweet-actions{
+		max-height: 200px;
+		display:block;
+
+	}
+	.tweet:hover .tweet-actions li{
+		display:inline-block;
+	}
+
 		.tweet-actions ul {
 			list-style-type: none;
 		}
@@ -209,8 +229,15 @@ body {
 	}
 
 	.stats {
+		overflow: hidden;
+		transition-duration:1s;
+		max-height: 0px;
 		margin: 12px 0 12px 42px;
 		border-top: 1px solid #e8e8e8;
+	}
+	.tweet:hover .stats{
+		max-height: 400px;
+		display:block;
 	}
 		.stats, .stats div {
 			box-sizing: border-box;
@@ -249,6 +276,8 @@ body {
 		}
 
 		.reply {
+			height:0px;
+			overflow: hidden;
 			position: relative;
 			clear: both;
 			padding-left: 43px;
